--- a/clase5/grid.css
+++ b/clase5/grid.css
@@ -8,6 +8,12 @@
  	border: 2px solid black;
  }
 
+  .col-sm-1 {
+ 	background-color: blue;
+ 	border: 2px solid black;
+ 	color: white;
+ }
+
   .col-xs-6 {
  	background-color: orange;
  	border: 2px solid black;
@@ -16,4 +22,10 @@
  .col-xs-2 {
  	background-color: grey;
  	border: 2px solid black;
+ }
+
+ .col-xs-1 {
+ 	background-color: blue;
+ 	border: 2px solid black;
+ 	color: white;
  }
