--- a/todo-list2/frontend/assets/css/styles.css
+++ b/todo-list2/frontend/assets/css/styles.css
@@ -26,14 +26,18 @@ li:hover {
 	cursor: pointer;
 }
 
+li:nth-child(even) {
+  background-color: #f7f7f7;
+}
+
 h1 {
 	background-color: #ffbb00;
-	  color: black;
-	  margin: 0;
-	  padding: 10px 20px;
-	  text-transform: uppercase;
-	  font-size: 24px;
-	  font-weight: normal;
+	color: black;
+	margin: 0;
+	padding: 10px 20px;
+	text-transform: uppercase;
+	font-size: 24px;
+	font-weight: normal;
 }
 
 hr {
@@ -52,9 +56,9 @@ hr {
 	background-color: #FFEE46;
 	margin: 10px;
 	padding: 1%;
-	-webkit-box-shadow: 0 10px 6px -6px #777;
-	-moz-box-shadow: 0 10px 6px -6px #777;
-	box-shadow: 0 10px 6px -6px #777;
+	-moz-box-shadow:    3px 3px 5px 6px #ccc;
+	-webkit-box-shadow: 3px 3px 5px 6px #ccc;
+	box-shadow:         5px 8px 30px 10px #9c9090;
 	font-size: 20px;
 }
 
