--- a/clase2/specificity.css
+++ b/clase2/specificity.css
@@ -1,3 +1,10 @@
+.container {
+	margin: 0 auto;
+	width: 900px;
+	background-color: orange;
+	height: 1000px;
+}
+
 .box {
   border: 2px solid black;
 }
@@ -15,11 +22,3 @@ p { /* negro */
 }
 
 
-/*
-
-[
-  {"keys": ["alt+shift+f"], "command": "reindent", "args": {"single_line": false}}
-]
-
-
-*/
