--- a/clase6/enero18/style.css
+++ b/clase6/enero18/style.css
@@ -2,3 +2,31 @@
   box-sizing: border-box;
 }
 
+#navbar	{
+	margin-bottom: 5%;
+}
+
+.thumbnail {
+	padding-left: 5%;
+	padding-right: 5%;
+	padding-top: 5%;
+	border-radius: 0px;
+	height: 370px;
+}
+.thumbnail>img {
+	height: 200px;
+}
+
+.thumbnail>.caption {
+	padding: 2%;
+}
+
+p {
+	margin: 0 0 5px;
+	font-size: 90%;
+}
+
+#add-product {
+	max-width: 500px;
+	margin: auto;
+}
